# ogdigits

./: .gitignore  CMakeLists.txt  ImageLoader.cpp  ImageLoader.h  Makefile  ModelStats.h  README.md  data.cpp  data.h  fixed_model.cpp  fixed_model.h  image_loader.cpp  image_loader.h  main.cpp  math_3d.h  ogmain.cpp  ogmain.h  opengl_globals.cpp  opengl_globals.h  shader.cpp  shader.h  text_engine.cpp  text_engine.h
shaders/: color.frag  color.vert  text.frag  text.vert  texture.frag
